--- a/indexfinal.html
+++ b/indexfinal.html
@@ -31,9 +31,9 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">PROJECT</a></li>
+                    <li><a href="./indexfirst.html">HOME</a></li>
+                    <li><a href="./insta.html">ABOUT</a></li>
+                    <li><a href="./index.html">PROJECT</a></li>
                 </ul>
             </div>
         </row>
